--- a/fly.toml
+++ b/fly.toml
@@ -1,28 +1,25 @@
-app = "zebra-backend"
-primary_region = "hkg"
+# fly.toml app configuration file generated for zebra-backend on 2025-02-17T15:35:42+08:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'zebra-backend'
+primary_region = 'hkg'
 
 [build]
-  dockerfile = "Dockerfile"
+  builder = 'paketobuildpacks/builder:base'
+  buildpacks = ['gcr.io/paketo-buildpacks/go']
 
 [env]
-  PORT = "8080"
+  PORT = '8080'
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
-[[services]]
-  protocol = "tcp"
-  internal_port = 8080
-  processes = ["app"]
-
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
+[[vm]]
+  size = 'shared-cpu-1x'
